# 10ft

./: data.csv  package.json  plot.py  pyproject.toml  readme.md
pages/: index.js
