[tool.poetry]
name = "10ft"
version = "0.1.0"
description = ""
authors = ["Matt Ball <matt.ball.2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
